--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tippyjs/react": "^4.2.6",
     "@walletconnect/web3-provider": "^1.8.0",
     "chart.js": "^3.8.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
