--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.52.1",
     "@tippyjs/react": "^4.2.6",
-    "@walletconnect/web3-provider": "^1.8.0",
     "chart.js": "^3.8.0",
     "cors": "^2.8.5",
     "date-fns": "^2.29.3",
@@ -57,8 +56,8 @@
     "react-tooltip": "^5.13.1",
     "redux": "^4.2.0",
     "sharp": "^0.30.7",
-    "swiper": "^8.2.4",
-    "wagmi": "^0.8.9"
+    "styled-components": "^6.1.2",
+    "swiper": "^8.2.4"
   },
   "devDependencies": {
     "autoprefixer": "10.4.5",
